<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@mipmap/background"
    android:paddingTop="100dp"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/pintext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pin"
        android:gravity="center_horizontal"
        android:backgroundTint="@color/white"
        android:textColorHint="@color/white"
        android:inputType="phone"
        android:textColor="@color/white"
        android:maxLength="18"
        android:layout_marginBottom="30dp"
        />
    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/white"
        android:onClick="submitglo"
        android:text="@string/submit"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info"
        android:layout_marginTop="50dp"
        android:textSize="@dimen/text_size1"
        android:textColor="@color/white"
        android:gravity="center"/>

</LinearLayout>