<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@mipmap/background"
    android:paddingTop="80dp"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/android_cardview_3"
        android:layout_width="match_parent"
        app:cardUseCompatPadding="true"
        android:onClick="etisalatcard7"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:padding="16dp">
            <TextView
                android:id="@+id/databal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:paddingBottom="5dp"
                android:text="@string/datadaily"
                android:textSize="@dimen/text_size" />
            <TextView
                android:id="@+id/databali"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:text="@string/etisalatdaily"
                android:textSize="@dimen/text_size1" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/android_cardview_4"
        android:layout_width="match_parent"
        app:cardUseCompatPadding="true"
        android:onClick="etisalatcard8"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:padding="16dp">
            <TextView
                android:id="@+id/databall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:paddingBottom="5dp"
                android:text="@string/dataweekly"
                android:textSize="@dimen/text_size" />

            <TextView
                android:id="@+id/databaller"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:text="@string/etisalatweekly"
                android:textSize="@dimen/text_size1" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/android_cardview_5"
        android:layout_width="match_parent"
        app:cardUseCompatPadding="true"
        android:onClick="etisalatcard9"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:padding="16dp">
            <TextView
                android:id="@+id/databalla"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:paddingBottom="5dp"
                android:text="@string/datamonthly"
                android:textSize="@dimen/text_size" />
            <TextView
                android:id="@+id/databallaij"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:text="@string/etisalatmonthly"
                android:textSize="@dimen/text_size1" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>