<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true">
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@mipmap/background"
    android:paddingTop="2dp"
    android:layout_height="wrap_content">
    <android.support.v7.widget.CardView
        android:id="@+id/android_cardview_3"
        android:layout_width="match_parent"
        app:cardUseCompatPadding="true"
        android:onClick="airtelcard1"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:padding="16dp">
            <TextView
                android:id="@+id/databal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:paddingBottom="5dp"
                android:text="@string/databalance"
                android:layout_centerInParent="true"
                android:textSize="@dimen/text_size" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/data_sub"
        android:layout_width="match_parent"
        app:cardUseCompatPadding="true"
        android:onClick="airtelcard2"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:padding="16dp">
            <TextView
                android:id="@+id/sub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:paddingBottom="5dp"
                android:layout_centerInParent="true"
                android:text="@string/data"
                android:textSize="@dimen/text_size" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/android_cardview_1"
        android:layout_width="match_parent"
        android:onClick="airtelcard3"
        app:cardUseCompatPadding="true"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:padding="@dimen/padding_card">
            <TextView
                android:id="@+id/ntwrk1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:paddingBottom="5dp"
                android:text="@string/borrow"
                android:layout_centerInParent="true"
                android:textSize="@dimen/text_size" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>





    <android.support.v7.widget.CardView
        android:id="@+id/android_cardview_4"
        android:layout_width="match_parent"
        app:cardUseCompatPadding="true"
        android:onClick="airtelcard4"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:padding="16dp">
            <TextView
                android:id="@+id/recharge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:paddingBottom="5dp"
                android:layout_centerInParent="true"
                android:text="@string/recharge"
                android:textSize="@dimen/text_size" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/android_cardview_5"
        android:layout_width="match_parent"
        app:cardUseCompatPadding="true"
        android:onClick="airtelcard5"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:padding="16dp">
            <TextView
                android:id="@+id/airtimebalance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:paddingBottom="5dp"
                android:layout_centerInParent="true"
                android:text="@string/airtimebalance"
                android:textSize="@dimen/text_size" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/android_cardview_2"
        android:layout_width="match_parent"
        app:cardUseCompatPadding="true"
        android:onClick="airtelcard6"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:padding="16dp">
            <TextView
                android:id="@+id/ntwrk2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:paddingBottom="5dp"
                android:layout_centerInParent="true"
                android:text="@string/shownumber"
                android:textSize="@dimen/text_size" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>
    </ScrollView>